syntax = "proto3";

package post;
option go_package = "common/proto";

import "google/protobuf/timestamp.proto";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (Post);
  rpc GetPost(GetPostRequest) returns (Post);
  rpc UpdatePost(UpdatePostRequest) returns (Post);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);

  rpc ViewPost(ViewPostRequest) returns (ViewPostResponse);
  rpc LikePost(LikePostRequest) returns (LikePostResponse);
  rpc CommentPost(CommentPostRequest) returns (Comment);
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
}

message Post {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  string creator_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_private = 7;
  repeated string tags = 8;
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  string creator_id = 3;
  bool is_private = 4;
  repeated string tags = 5;
}

message GetPostRequest {
  uint64 id = 1;
  string requester_id = 2;
}

message UpdatePostRequest {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  bool is_private = 4;
  repeated string tags = 5;
  string updater_id = 6;
}

message DeletePostRequest {
  uint64 id = 1;
  string deleter_id = 2;
}

message DeletePostResponse {
  bool success = 1;
}

message ListPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string requester_id = 3;
  string creator_id = 4;
  repeated string tags = 5;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total_count = 2;
  int32 total_pages = 3;
}

message Comment {
  uint64 id = 1;
  uint64 post_id = 2;
  uint64 author_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ViewPostRequest {
  uint64 post_id = 1;
  uint64 viewer_id = 2;
}

message ViewPostResponse {
  bool success = 1;
  Post post = 2;
}

message LikePostRequest {
  uint64 post_id = 1;
  uint64 liker_id = 2;
}

message LikePostResponse {
  bool success = 1;
  int32 total_likes = 2;
}

message CommentPostRequest {
  uint64 post_id = 1;
  uint64 author_id = 2;
  string content = 3;
}

message ListCommentsRequest {
  uint64 post_id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  int32 total_count = 2;
  int32 total_pages = 3;
}
